--- a/public/builds/WordArchitect/index.html
+++ b/public/builds/WordArchitect/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WordArchitect.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WordArchitect.data.gz",
-        frameworkUrl: buildUrl + "/WordArchitect.framework.js.gz",
-        codeUrl: buildUrl + "/WordArchitect.wasm.gz",
+        dataUrl: buildUrl + "/WebGL Builds.data",
+        frameworkUrl: buildUrl + "/WebGL Builds.framework.js",
+        codeUrl: buildUrl + "/WebGL Builds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WordArchitect",
